# Projet_c_2ESGI

./: .gitignore  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  docker-compose.test.yml  init.sql
.github/workflows/: main_checks.yml
assets/conf/: .env
assets/save/: board.txt
serv/: .env  Dockerfile  docker-compose.test.yml  init.sql
serv/game-serv/: package-lock.json  package.json  tsconfig.json
serv/game-serv/src/: app.controller.ts  app.service.ts  main.ts  positionUser.ts
src/: array.c  array.h  connection.c  connection.h  display.c  display.h  enemy.c  enemy.h  event.c  event.h  game-management.c  game-management.h  game.c  game.h  linux_function.c  linux_function.h  list.c  list.h  main.c  map.c  map.h  menu.c  menu.h  player.c  player.h  save.c  save.h  tetris.c  tetris.h  tetris_front.c  tetris_front.h  tetris_piece.c  tetris_piece.h  tetris_player_action.c  tetris_player_action.h
